# adk-gcp-recommender-agent

./: README.md
recommedations/: .env.example  agent.py  prompt.py  pyproject.toml
recommedations/shared_libraries/: constants.py
recommedations/sub_agents/: query_execution_prompt.py  recommender_query_gen_prompt.py  result_formatter_prompt.py  table_insights_export.py  table_recommendations_export.py
recommedations/tools/: bq_connector.py
